--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -9,7 +9,7 @@
 <body th:with="currentPage = 'ADMIN'">
 <main layout:fragment="content" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" id="menu">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">MenuList</h1>
+        <h1 class="h2">메뉴관리</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
                 <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -56,18 +56,18 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="sortNo">Sort No</label>
-                            <input type="text" class="form-control" id="sortNo" v-model="params.sortNo">
+                            <input type="text" class="form-control" id="sortNo" v-model="params.sortOrderNo">
                         </div>
                         <div class="form-group col-md-2">
                             <label for="useFlag">Use Flag</label>
                             <select id="useFlag" class="form-control" v-model="params.useFlag">
-                                <option value="1">Yes</option>
-                                <option value="0">No</option>
+                                <option value="true">Yes</option>
+                                <option value="false">No</option>
                             </select>
                         </div>
                     </div>
                     <div class="text-right">
-                        <button type="button" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-primary" @click="saveMenu">Save</button>
                     </div>
                 </form>
             </div>
@@ -82,9 +82,29 @@
             el: "#menu",
             data: {
                 params: {
+                    id: null,
+                    menuName: null,
+                    menuDesc: null,
+                    menuUrl: null,
+                    parent: null,
+                    useFlag: null,
+                    sortOrderNo: null,
+                    menuLevelNo: 0
                 },
                 treeData: [],
-                menuTree: null
+                menuTree: false
+            },
+            watch: {
+                'params.menuName': function (val) {
+                    this.$nextTick(function () {
+                        try {
+                            var node = $(this.$refs.menuTree).jstree(true).get_node(this.params.id);
+                            $(this.$refs.menuTree).jstree(true).rename_node(node, val);
+                        } catch (error) {
+                            console.log(error);
+                        };
+                    })
+                }
             },
             methods: {
                 loadData: function () {
@@ -94,16 +114,10 @@
                         contentType: "application/json",
                         url:'/admin/menu/api',
                         data: {}, // String -> json 형태로 변환
-                        beforeSend : function(xhr)
-                        {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
-                            xhr.setRequestHeader([[${_csrf.headerName}]], [[${_csrf.token}]]);
-                        },
                         dataType: 'json', // success 시 받아올 데이터 형
-                        async: true, //동기, 비동기 여부
-                        cache :false, // 캐시 여부
                         success: function(data, textStatus, jqXhr){
                             console.log(data);
-                            that.createJstree(that.treeData);
+                            that.createJstree(data);
                         },
                         error:function(xhr,status,error){
                             console.log(xhr)
@@ -122,23 +136,67 @@
                         data = node.original;
                         this.params.id = data.id;
                         this.params.menuDesc = data.menuDesc;
-                        this.params.menuName = data.menuName;
+                        this.params.menuName = node.text;
                         this.params.menuUrl = data.menuUrl;
-                        this.params.parent = data.parent;
-                        this.params.sortNo = data.sortOrderNo;
-                        this.params.useFlag = data.useFlag ? 1 : 0;
+                        this.params.parent = node.parent;
+                        this.params.sortOrderNo = data.sortOrderNo;
+                        this.params.useFlag = data.useFlag == 1 ? true : false;
+                        this.params.menuLevelNo = node.parents.length - 1;
                     }
+                },
+                saveMenu: function () {
+                    console.log(this.params)
+                    var that = this;
+                    var param = this.params;
+
+                    console.log(JSON.stringify(param))
+
+                    $.ajax({
+                        type: 'POST',
+                        contentType: "application/json",
+                        url:'/admin/menu/api',
+                        data: JSON.stringify(param), // String -> json 형태로 변환
+                        // beforeSend : function(xhr)
+                        // {   /*데이터를 전송하기 전에 헤더에 csrf값을 설정한다*/
+                        //     xhr.setRequestHeader([[${_csrf.headerName}]], [[${_csrf.token}]]);
+                        // },
+                        dataType: 'json', // success 시 받아올 데이터 형
+                        success: function(data, textStatus, jqXhr){
+                            console.log(data);
+                            bootbox.alert("저장되었습니다.", function () {
+                                that.loadData();
+                            });
+                            // that.createJstree(that.treeData);
+                        },
+                        error:function(xhr,status,error){
+                            console.log(xhr)
+                            console.log(status)
+                            console.log(error)
+                            if (error != null) {
+                                bootbox.alert(xhr.responseJSON.error);
+                            }
+                        }
+                    });
                 },
                 createJstree: function (data) {
                     console.log(data)
                     var that = this;
-
                     this.treeData = data.data;
-                    this.menuTree = $(this.$refs.menuTree);
-                    this.menuTree.jstree({
+
+                    if (this.menuTree) {
+                        $(this.$refs.menuTree).jstree(true).settings.core.data = this.treeData;
+                        $(this.$refs.menuTree).jstree(true).refresh();
+
+                        return;
+                    }
+
+                    this.menuTree = true;
+
+                    // this.menuTree = $(this.$refs.menuTree);
+                    $(this.$refs.menuTree).jstree({
                         'core': {
                             "check_callback" : true,
-                            'data': data
+                            'data': that.treeData
 
                                 /*[
                                 {"id": "1", "parent": "#", "text": "About", "menuDesc": "휴네스 소개", "menuName": "about",
@@ -168,17 +226,33 @@
                             console.log(obj)
                         }*/
                     }).on('loaded.jstree', function (evt, data) {
+                        // $(this).jstree('open_all');
+                        var rootNode = $(this).jstree(true).get_node("1");
+
+                        if (rootNode) {
+                            $(this).jstree(true).select_node("1");
+                            $(this).jstree(true).open_node("1");
+                        }
                     }).on('create_node.jstree', function (evt, data) {
                         data.status = "created";
                         console.log(data)
                     }).on('delete_node.jstree', function (evt, data) {
                         console.log(data)
+                        that.deleteMenu(data);
                         console.log($(this).jstree())
                     }).on('rename_node.jstree', function (evt, data) {
+                        console.log("rename")
+                        console.log(data)
+                        var nodeId = data.node.id;
+                        console.log(nodeId);
+                        $(this).jstree(true).deselect_all();
+                        $(this).jstree(true).select_node(nodeId);
                     }).on('edit_node.jstree', function (evt, data) {
+                        console.log("edit")
+                        console.log(data)
                     }).on('move_node.jstree', function (evt, data) {
                     }).on('open_node.jstree', function (evt, data) {
-                    })
+                    });
                 }
             },
             created: function () {
@@ -186,7 +260,7 @@
             },
             mounted: function () {
                 var that = this;
-                bootbox.alert("load")
+                
 
                 /*$(".createNode").on("click", function () {
                     alert(1)
