--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -9,6 +9,8 @@
         <meta name="description" content="Huneth acadeby management system">
         <meta name="author" content="huneth">
         <meta name="generator" content="nomi">
+        <meta th:name="_csrf" th:content="${_csrf.token}"/>
+        <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
             integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -24,12 +26,16 @@
         <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+        <script th:src="@{/js/common.js}"></script>
 
-        <script th:inline="javascript">
+        <script th:inline="javascript" type="text/javascript">
             /*<![CDATA[*/
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
             $.ajaxSetup({
                 beforeSend: function(xhr, settings) {
-                    xhr.setRequestHeader([[${_csrf.headerName}]], [[${_csrf.token}]]);
+                    xhr.setRequestHeader(header, token);
                 }
             });
             /*]]>*/
