--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,10 @@
                     <!--<li class="nav-item" th:classappend="${currentPage == 'HOME'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
                     </li>-->
-                    <li class="nav-item" th:classappend="${currentPage == 'ABOUT'} ? 'active'">
+                    <li class="nav-item" th:each="menu : ${menuList}">
+                        <a class="nav-link" href="#" th:href="@{${menu.menuUrl}}" th:text="${menu.menuName}">About</a>
+                    </li>
+                    <!--<li class="nav-item" th:classappend="${currentPage == 'ABOUT'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/about}">About</a>
                     </li>
                     <li class="nav-item" th:classappend="${currentPage == 'ACADEMY'} ? 'active'">
@@ -34,7 +37,7 @@
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/admin/menu}">관리자</a>
-                    </li>
+                    </li>-->
                     <!--<li class="nav-item" th:classappend="${currentPage == 'ADMIN'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/admin/}">관리자</a>
                     </li>-->
